# web-service-fastapi

./: .gitignore  .pylintrc  LICENSE  Readme.md  requirements.txt  setup.cfg  setup.py
api/: requirements.txt  utils.py
example/: openapi.py  simple.py
yaha/log/: log.py
yaha/web_api/: factory.py  request_process.py  web_service.py
