[metadata]
# 项目名称，发布、安装时以此作为包名
name = chat-openai
version = 1.0.0
author = yaha
author_email = 1143990204@qq.com
# 项目概要描述信息，一句话让用户明白项目概要，不支持中文
description = A description of your library
# 项目的详细描述内容和格式，包括readme和changelog等，通常使用md或rst等格式
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown

# 开源授权协议，非对外开源的项目无需关注
license = MIT

[options]
# 包名称，find:表示自动寻找，可在options.packages.find中进行详细配置
packages = find:
install_requires =
    GPUtil>=1.4.0
    psutil
    uvicorn
    fastapi
    # List your dependencies here
# 自动添加被版本控制的数据文件
include_package_data = True
# 项目是纯py项目，可以直接执行zip源码包
zip_safe = True

[sdist]
dist_dir = output/

[bdist_wheel]
universal=1
dist_dir = output/
